--- a/src/pages/home/styles/home.css
+++ b/src/pages/home/styles/home.css
@@ -32,6 +32,7 @@
   display: flex;
   justify-content: center;
   width: 85%;
+  flex-direction: column;
 }
 .desc-sub-container p{
   font-family: 'montserrat', sans-serif;
@@ -41,4 +42,11 @@
 .btn-container{
   display: flex;
   flex-direction: row;
+}
+.title-sub-container img{
+max-width: 50%
+}
+.title-sub-container{
+  display: flex;
+  justify-content: center;
 }
