--- a/src/pages/home/styles/header.css
+++ b/src/pages/home/styles/header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 header{
   width: 100%;
@@ -70,7 +72,7 @@ header nav{
   display: flex;
 }
 .cart-container{
-  width: 40%;
+  width: 10%;
   height: 90%;
   display: flex;
   align-items: center;
@@ -92,11 +94,11 @@ header nav{
   opacity: 0.7;
 }
 .cart-container img{
-  width: 90%;
+  width: 140%;
   transition: 0.2s;
 }
 .cart-container img:hover{
-  width: 95%;
+  width: 135%;
   opacity: 0.4;
 }
 
