adicionando versão final da tela de login e sistema de incrementar no carrinho

--- a/public/pages/cart/styles/style.css
+++ b/public/pages/cart/styles/style.css
@@ -14,6 +14,7 @@ body {
     padding: 20px;
     max-width: 960px;
     margin: 0 auto;
+    overflow-y: auto;
 }
 .container h1{
     font-family: 'Bebas Neue';
