--- a/public/pages/login/styles/style.css
+++ b/public/pages/login/styles/style.css
@@ -10,8 +10,6 @@ body{
   width: 50%;
   display: flex;
   height: 75vh;
-
-
 }
 
 .element-container img {
@@ -22,13 +20,16 @@ body{
 
 .login-container {
   display: flex;
-  height: 75vh;
+  position: relative;
+  min-height: 75vh;
   width: 50%;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
-
+@media (max-width: 120px){
+    
+}
 .sub-container-login {
   width: 90%;
   display: flex;
