--- a/public/pages/login/styles/style.css
+++ b/public/pages/login/styles/style.css
@@ -1,6 +1,7 @@
 main {
   display: flex;
   height: 75vh;
+  position: relative;
 }
 body{
   height: 75vh;
@@ -15,44 +16,52 @@ body{
 .element-container img {
   width: 100%;
   object-fit: cover;
-  height: 92vh;
+  height: 75vh;
 }
 
 .login-container {
   display: flex;
-  position: relative;
+  flex-grow: 1;
   min-height: 75vh;
   width: 50%;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 @media (max-width: 120px){
-    
+
 }
 .sub-container-login {
   width: 90%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .sub-container-login div {
   display: flex;
   width: 80%;
   flex-wrap: wrap;
-  padding-bottom: 5%;
+  flex-grow: 1;
+
 }
 
 .sub-container-login div div p {
   font-family: 'Montserrat';
-  font-size: 14px;
+  font-size: 20px;
   color: gray;
+  padding-bottom: 20px;
 }
 
 .sub-container-login div div {
   padding-top: 20px;
+  flex-grow: 1;
+  position: relative;
+
 }
 
 
@@ -63,6 +72,8 @@ form {
   width: 80%;
   flex-direction: column;
   gap: 30px;
+  flex-grow: 1;
+
 }
 
 form input {
