--- a/public/pages/register/styles/style.css
+++ b/public/pages/register/styles/style.css
@@ -21,7 +21,7 @@ body{
 .element-container img {
   width: 100%;
   object-fit: cover;
-  height: 92vh;
+  height: 75vh;
 }
 
 .login-container {
@@ -31,21 +31,25 @@ body{
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  flex-grow: 1;
 }
 
 .sub-container-login {
   width: 90%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .sub-container-login div {
   display: flex;
   width: 80%;
   flex-wrap: wrap;
-  padding-bottom: 5%;
+  flex-grow: 1;
+  position: relative;
 }
 
 .sub-container-login div div p {
@@ -54,7 +58,6 @@ body{
 }
 
 .sub-container-login div div {
-  padding-top: 20px;
 }
 
 
