--- a/public/pages/cart/styles/style.css
+++ b/public/pages/cart/styles/style.css
@@ -15,6 +15,18 @@ body {
     max-width: 960px;
     margin: 0 auto;
     overflow-y: auto;
+    height: 75vh;
+}
+::-webkit-scrollbar{
+  background-color: #333;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #1e1e1e;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover{
+  cursor: pointer;
 }
 .container h1{
     font-family: 'Bebas Neue';
