--- a/public/pages/home/styles/catalogue.css
+++ b/public/pages/home/styles/catalogue.css
@@ -86,6 +86,9 @@
   line-height: 1.5;
   color: white;
  }
+ .desc-sub-container p {
+    font-size: clamp(1rem, 2vw, 1.2rem);
+}
 
  .textbody {
     font-family: 'Poppins';
