--- a/styles/header.css
+++ b/styles/header.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 header{
   width: 100%;
-  height: 136px;
+  height: 12%;
   background-color: rgb(109, 109, 109, 0.15);
   display: flex;
   justify-content: space-between;
@@ -11,13 +11,13 @@ header{
 header nav{
   display: flex;
   width: 40%;
-  height: 136px;
+  height: 12%;
   justify-content: space-around;
 }
 .nav-btn-header {
   font-family: inherit;
   display: inline-block;
-  width: 13em;
+  width: 20vh;
   height: 2.9em;
   line-height: 2.5em;
   overflow: hidden;
@@ -27,7 +27,7 @@ header nav{
   z-index: 1;
   background-color: transparent;
   border: 1px solid red;
-  border-radius: 50px;
+  border-radius: 25px;
   position: relative;
   transition: 0.5s;
   outline: none;
@@ -44,8 +44,7 @@ header nav{
 }
 
 .nav-btn-header:hover {
-  width: 14.1em;
-  height: 3em;
+  scale: 1.1;
 }
 
 .nav-btn-header:before {
